--- a/Example/Keyboard/Base.lproj/Main.storyboard
+++ b/Example/Keyboard/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="F9O-79-kZv">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="F9O-79-kZv">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -20,7 +20,6 @@
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wWS-bm-Rev">
                                 <rect key="frame" x="155" y="28" width="290" height="103"/>
-                                <animations/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="103" id="AGT-ES-Hov"/>
                                     <constraint firstAttribute="width" constant="290" id="KWZ-dN-2Oo"/>
@@ -33,7 +32,6 @@
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="First text field" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5Vs-he-YdV">
                                 <rect key="frame" x="20" y="249" width="560" height="30"/>
-                                <animations/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="PuN-fK-z3n"/>
                                 </constraints>
@@ -45,7 +43,6 @@
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Second text field" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bnp-vi-33W">
                                 <rect key="frame" x="20" y="309" width="560" height="30"/>
-                                <animations/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="5bF-hC-Eyz"/>
                                 </constraints>
@@ -57,7 +54,6 @@
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Third text field" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="o59-Z7-vHX">
                                 <rect key="frame" x="20" y="369" width="560" height="30"/>
-                                <animations/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="oew-3i-AGW"/>
                                 </constraints>
@@ -68,7 +64,6 @@
                                 </connections>
                             </textField>
                         </subviews>
-                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="5Vs-he-YdV" firstAttribute="trailing" secondItem="9l0-09-W2k" secondAttribute="trailingMargin" id="0RA-hF-VgV"/>
@@ -110,7 +105,6 @@
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I don't handle the keyboard automagically... :'(" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gtu-Km-QDd">
                                 <rect key="frame" x="155" y="248" width="290" height="103"/>
-                                <animations/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="103" id="A3k-YA-nsh"/>
                                     <constraint firstAttribute="width" constant="290" id="ra1-sD-a2B"/>
@@ -120,7 +114,6 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="centerY" secondItem="gtu-Km-QDd" secondAttribute="centerY" id="IKM-2c-EZ3"/>
@@ -144,7 +137,6 @@
                     <tabBar key="tabBar" contentMode="scaleToFill" id="jhi-XV-YZA">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <animations/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
